--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function populateform(passvalue){
             <strong class="strng">Password Length: </strong> <input type="text" name="length" size="3" value="6" class="strngs">  <br>
             <input type="button" value="Generate PassWord" onclick="populateform(this.form.length.value)" class="btn btn-danger genbtn"> <br>
             <h6>Your Random Passoword </h6>
-            <i class="fas fa-hand-point-down animated infinite heartBeat"></i> <br> <input type="text" size="18" name="output" class="out">
+            <i class="fas fa-hand-point-down animated infinite heartBeat"></i> <br> <input type="text" name="output" class="out">
         </form>
     </div>
 
